# rust-in-cpp-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: get_corrosion.cmake
cpp_call_rust/: CMakeLists.txt  main.cpp
rust_lib/: Cargo.toml  build.rs
rust_lib/.cargo/: config.toml
rust_lib/src/: lib.rs
